--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 													<img src="sign.jpg" height="80px" width="80px">
 												</td>
 												<td class="text-center" colspan="2">
-													<img src="qr.png" height="80px" width="80px">
+													<img src="qr1.png" height="80px" width="80px">
 												</td>
 											</tr>
 											
@@ -176,4 +176,5 @@
     <script src="js/script.js"></script>
   
 </body></html>
+
 
